<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars"/>

                    <ImageButton
                        android:id="@+id/fragment_profile_details_take_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:src="@drawable/ic_baseline_add_a_photo_24"
...

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/fragment_profile_details_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="left"
                        android:layout_toStartOf="@+id/fragment_profile_details_edit_profile"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/fragment_profile_details_profile_name_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@+id/fragment_profile_details_save_profile"
                        android:autofillHints="username"
                        android:hint="@string/fragment_profile_details_username_placeholder"
                        android:inputType="textPersonName"
                        android:text="@string/fragment_profile_details_username_placeholder"
                        android:layout_gravity="left"
                        android:visibility="gone"
...
                        android:layout_height="48dp"
                        android:inset="0dp"
                        app:icon="@drawable/ic_baseline_save_24"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:shapeAppearanceOverlay="@style/Circular"
                        android:layout_toStartOf="@id/fragment_profile_details_cancel_modification"
                        android:contentDescription="@string/fragment_profile_details_profile_name_descriptions_save"
                        android:layout_marginEnd="8sp"
                        android:visibility="gone"
                        />
                    <Button
                        android:id="@+id/fragment_profile_details_cancel_modification"
...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fragment_profile_details_follow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginHorizontal="6dp"
                android:text="@string/follow" />

...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:id="@+id/fragment_profile_details_profile_description"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:text="@string/profile_description"
                android:layout_alignParentStart="true"

                />

            <EditText
                android:id="@+id/fragment_profile_details_profile_description_edit"
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:autofillHints="user description"
                android:hint="@string/fragment_profile_details_description_placeholder"
                android:inputType="text"
...
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/fragment_profile_details_profile_email"
                    android:layout_width="162dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:ems="10"/>
                <EditText
                    android:id="@+id/fragment_profile_details_profile_email_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/fragment_profile_details_email_placeholder"
                    android:autofillHints="user email address"
                    android:visibility="gone"
                    android:hint="@string/fragment_profile_details_email_placeholder"
                    />

                <TextView
                    android:id="@+id/fragment_profile_details_profile_phone"
                    android:layout_width="206dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:ems="10"/>
                <EditText
                    android:id="@+id/fragment_profile_details_profile_phone_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@string/fragment_profile_details_phone_placeholder"
                    android:autofillHints="user phone number"
                    android:visibility="gone"
...
